--- a/Ats/nbproject/project.properties
+++ b/Ats/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=A-T-M-S-javafx
+application.title=Ats
 application.vendor=mdhhd
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -30,7 +30,7 @@ debug.test.modulepath=\
     ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/A-T-M-S-javafx.jar
+dist.jar=${dist.dir}/Ats.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -81,7 +81,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=a.t.m.s.javafx.ATMSJavafx
+javafx.main.class=ats.Ats
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
