--- a/Ats/nbproject/project.properties
+++ b/Ats/nbproject/project.properties
@@ -38,7 +38,9 @@ includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.fontawesomefx-8.9.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
