--- a/Ats/nbproject/project.properties
+++ b/Ats/nbproject/project.properties
@@ -34,13 +34,15 @@ dist.jar=${dist.dir}/Ats.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\mdhhd\\Downloads\\mysql-connector-java-8.0.17.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${libs.fontawesomefx-8.9.classpath}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
