--- a/Ats/nbproject/project.properties
+++ b/Ats/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\mdhhd\\Downloads\\mysql-connector-java-8.0.17.jar
+file.reference.mysql-connector-java-8.0.17.jar-1=C:\\Program Files\\Java\\mysql-connector-java-8.0.17.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -42,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.fontawesomefx-8.9.classpath}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.17.jar}
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
